--- a/index.html
+++ b/index.html
@@ -22,8 +22,51 @@
   <div class="banner">
     <h1>Home</h1>
   </div>
-  <div class="content">
-    
+  <div class="content-container">
+  <div class="content-row">
+    <div class="image" style="background-image: url('images/photos/Image-4.jpg');"></div>
+    <div class="text">
+      <h2>Over ons</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vitae sapien a arcu ornare lobortis commodo 
+      sit amet dui. Sed maximus accumsan libero, id malesuada diam tincidunt sit amet. Nunc semper odio 
+      tristique, mattis purus eget, efficitur mi. Pellentesque habitant morbi tristique senectus et netus et 
+      malesuada fames ac turpis egestas. Nunc eleifend scelerisque rhoncus. Quisque ornare erat in placerat 
+      facilisis. In a lorem eu neque varius consequat at in ante. Lorem ipsum dolor sit amet, consectetur adipiscing 
+      elit. Donec vitae sapien a arcu ornare lobortis commodo sit amet dui. Sed maximus accumsan libero, id 
+      malesuada diam tincidunt sit amet. Nunc semper odio tristique, mattis purus eget, efficitur mi. Pellentesque 
+      habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+      <a class="button" href="#about">Lees meer</a>
+    </div>
+  </div>
+  <div class="content-row row-reverse">
+    <div class="image" style="background-image: url('images/photos/Image-2.jpg');"></div>
+    <div class="text">
+      <h2>Contact</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vitae sapien a arcu ornare lobortis commodo 
+      sit amet dui. Sed maximus accumsan libero, id malesuada diam tincidunt sit amet. Nunc semper odio 
+      tristique, mattis purus eget, efficitur mi. Pellentesque habitant morbi tristique senectus et netus et 
+      malesuada fames ac turpis egestas. Nunc eleifend scelerisque rhoncus. Quisque ornare erat in placerat 
+      facilisis. In a lorem eu neque varius consequat at in ante. Lorem ipsum dolor sit amet, consectetur adipiscing 
+      elit. Donec vitae sapien a arcu ornare lobortis commodo sit amet dui. Sed maximus accumsan libero, id 
+      malesuada diam tincidunt sit amet. Nunc semper odio tristique, mattis purus eget, efficitur mi. Pellentesque 
+      habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+      <a class="button" href="#contact">Lees meer</a>
+    </div>
+  </div>
+  </div>
+  <div class="footer">
+    <div class="navigation">
+    <div class="item">
+      <h4>© 2021 - Bakkerij</h4>
+    </div>
+    <div class="item">
+      <ul class="nav-links">
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">Over ons</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </div>
+  </div>
   </div>
 </body>
 </html>
