--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     <div class="item">
       <ul class="nav-links">
         <li><a href="#home">Home</a></li>
-        <li><a href="#about">Over ons</a></li>
+        <li><a href="./about.html">Over ons</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
     </div>
   </div>
-  <div class="banner">
+  <div class="banner" style="background-image: url('images/photos/Image-6.jpg');">
     <h1>Home</h1>
   </div>
   <div class="content-container">
@@ -35,7 +35,7 @@
       elit. Donec vitae sapien a arcu ornare lobortis commodo sit amet dui. Sed maximus accumsan libero, id 
       malesuada diam tincidunt sit amet. Nunc semper odio tristique, mattis purus eget, efficitur mi. Pellentesque 
       habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
-      <a class="button" href="#about">Lees meer</a>
+      <a class="button" href="./about.html">Lees meer</a>
     </div>
   </div>
   <div class="content-row row-reverse">
