Basic about page has been set up

--- a/about.html
+++ b/about.html
@@ -24,7 +24,65 @@
   </div>
   <div class="about-content">
     <div class="about-container">
-
+      <h2>Over ons</h2>
+      <p>Curabitur felis dolor, gravida et dui eu, mattis mollis nulla. Quisque in pretium turpis, sed interdum mauris. Vivamus imperdiet, nisl eu accumsan finibus, risus leo commodo 
+      ante, a vulputate tellus nulla eu tellus. Etiam vitae nisi neque. Donec aliquet arcu nec sem pretium aliquam. Phasellus quis euismod metus. Nulla facilisi. Donec vestibulum, leo 
+      sed auctor sollicitudin, magna nunc egestas odio, et porttitor libero enim vitae tellus. Vestibulum efficitur dui quam, nec faucibus elit egestas sit amet. Proin quis iaculis purus, 
+      tristique blandit magna. Nulla nec sollicitudin velit. Mauris lorem est, lobortis id diam at, lobortis convallis erat. Maecenas nec varius erat. Donec tortor velit, fringilla eleifend est 
+      quis, vehicula rutrum erat.</p>
+      <div class="image-container">
+        <div class="image-item"></div>
+      </div>
+      <p>Vivamus ut mattis nunc. Fusce convallis turpis ac urna dapibus ultrices. Nam lobortis diam nec tellus sollicitudin pretium sit amet at erat. Nulla interdum commodo neque, id 
+      tempor est viverra in. Phasellus id tellus odio. Ut sollicitudin, nunc sit amet placerat aliquet, nisl odio varius sapien, vel faucibus ligula lacus id nibh. Pellentesque id lorem vel 
+      arcu molestie rutrum sit amet sodales lectus. Quisque dictum lorem vitae risus consectetur, eget ornare leo pellentesque. Sed felis ex, ultricies nec feugiat vitae, rutrum in sem 
+      Curabitur felis dolor, gravida et dui eu, mattis mollis nulla. Quisque in pretium turpis, sed interdum mauris. Vivamus imperdiet, nisl eu accumsan finibus, risus leo commodo 
+      ante, a vulputate tellus nulla eu tellus. Etiam vitae nisi neque. Donec aliquet arcu nec sem pretium aliquam. Phasellus quis euismod metus. Nulla facilisi. Donec vestibulum, leo 
+      sed auctor sollicitudin, magna nunc egestas odio, et porttitor libero enim vitae tellus. Vestibulum efficitur dui quam, nec faucibus elit egestas sit amet. Proin quis iaculis purus, 
+      tristique blandit magna. Nulla nec sollicitudin velit. Mauris lorem est, lobortis id diam at, lobortis convallis erat. Maecenas nec varius erat. Donec tortor velit, fringilla eleifend est 
+      quis, vehicula rutrum erat. <br>
+      <br>
+      Vivamus ut mattis nunc. Fusce convallis turpis ac urna dapibus ultrices. Nam lobortis diam nec tellus sollicitudin pretium sit amet at erat. Nulla interdum commodo neque, id 
+      tempor est viverra in. Phasellus id tellus odio. Ut sollicitudin, nunc sit amet placerat aliquet, nisl odio varius sapien, vel faucibus ligula lacus id nibh. Pellentesque id lorem vel
+      </p>
+      <div class="employee-cards">
+        <div class="employee-card">
+          <img src="images/photos/Image-1.jpg" alt="Employee 1" class="headshot">
+          <h3>Lorem Ipsum</h3>
+          <p>Titel</p>
+          <div class="social-links">
+            <a href="#"><img src="images/photos/socials/instagram.png" alt="Facebook" class="social-icon"></a>
+            <a href="#"><img src="images/photos/socials/facebook.png" alt="Facebook" class="social-icon"></a>
+            <a href="#"><img src="images/photos/socials/twitter.png" alt="Twitter" class="social-icon"></a>
+            <a href="#"><img src="images/photos/socials/linkedin.png" alt="LinkedIn" class="social-icon"></a>
+          </div>
+          <p style="width: 300px;">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+            Donec fringilla justo nec diam vulputate, at luctus eros 
+            placerat. Duis massa arcu, ultrices mollis enim quis, 
+            tempor rutrum nunc. Pellentesque nisi massa, vehicula 
+            quis viverra eget, sollicitudin vestibulum ex.
+          </p>
+        </div>
+        <div class="employee-card">
+          <img src="images/photos/Image-1.jpg" alt="Employee 2" class="headshot">
+          <h3>Lorem Ipsum</h3>
+          <p>Titel</p>
+          <div class="social-links">
+            <a href="#"><img src="images/photos/socials/instagram.png" alt="Facebook" class="social-icon"></a>
+            <a href="#"><img src="images/photos/socials/facebook.png" alt="Facebook" class="social-icon"></a>
+            <a href="#"><img src="images/photos/socials/twitter.png" alt="Twitter" class="social-icon"></a>
+            <a href="#"><img src="images/photos/socials/linkedin.png" alt="LinkedIn" class="social-icon"></a>
+          </div>
+          <p style="width: 300px;">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+            Donec fringilla justo nec diam vulputate, at luctus eros 
+            placerat. Duis massa arcu, ultrices mollis enim quis, 
+            tempor rutrum nunc. Pellentesque nisi massa, vehicula 
+            quis viverra eget, sollicitudin vestibulum ex.
+          </p>
+        </div>
+      </div>
     </div>
   </div>
   <div class="footer">
