--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     </div>
     <div class="item">
       <ul class="nav-links">
-        <li><a href="#home">Home</a></li>
+        <li><a href="./index.html">Home</a></li>
         <li><a href="./about.html">Over ons</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="./contact.html">Contact</a></li>
       </ul>
     </div>
   </div>
