Cleaned up small issues

--- a/contact.html
+++ b/contact.html
@@ -15,12 +15,14 @@
       <ul class="nav-links">
         <li><a href="./index.html">Home</a></li>
         <li><a href="./about.html">Over ons</a></li>
-        <li><a href="./contact.html">Contact</a></li>
+        <li><a href="./contact.html" class="current-page">Contact</a></li>
       </ul>
     </div>
   </div>
   <div class="banner" style="background-image: url('images/photos/Image-3.jpg');">
-    <h1>Contact</h1>
+    <div class="overlay">
+        <h1>Contact</h1>
+    </div>
   </div>
   <div class="contact-container">
     <div class="information">
@@ -94,9 +96,9 @@
     </div>
     <div class="item">
       <ul class="nav-links">
-        <li><a href="#home">Home</a></li>
-        <li><a href="#about">Over ons</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="./about.html">Over ons</a></li>
+        <li><a href="./contact.html">Contact</a></li>
       </ul>
     </div>
   </div>
