--- a/about.html
+++ b/about.html
@@ -14,13 +14,15 @@
     <div class="item">
       <ul class="nav-links">
         <li><a href="./index.html">Home</a></li>
-        <li><a href="./about.html">Over ons</a></li>
+        <li><a href="./about.html" class="current-page">Over ons</a></li>
         <li><a href="./contact.html">Contact</a></li>
       </ul>
     </div>
   </div>
   <div class="banner" style="background-image: url('images/photos/Image-4.jpg');">
-    <h1>Over ons</h1>
+    <div class="overlay">
+      <h1>Over ons</h1>
+    </div>
   </div>
   <div class="about-content">
     <div class="about-container">
@@ -92,9 +94,9 @@
     </div>
     <div class="item">
       <ul class="nav-links">
-        <li><a href="#home">Home</a></li>
-        <li><a href="#about">Over ons</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="./about.html">Over ons</a></li>
+        <li><a href="./contact.html">Contact</a></li>
       </ul>
     </div>
   </div>
