--- a/index.html
+++ b/index.html
@@ -13,14 +13,16 @@
     </div>
     <div class="item">
       <ul class="nav-links">
-        <li><a href="./index.html">Home</a></li>
+        <li><a href="./index.html" class="current-page">Home</a></li>
         <li><a href="./about.html">Over ons</a></li>
         <li><a href="./contact.html">Contact</a></li>
       </ul>
     </div>
   </div>
   <div class="banner" style="background-image: url('images/photos/Image-6.jpg');">
-    <h1>Home</h1>
+    <div class="overlay">
+      <h1>Home</h1>
+    </div>
   </div>
   <div class="content-container">
   <div class="content-row">
@@ -61,9 +63,9 @@
     </div>
     <div class="item">
       <ul class="nav-links">
-        <li><a href="#home">Home</a></li>
-        <li><a href="#about">Over ons</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="./about.html">Over ons</a></li>
+        <li><a href="./contact.html">Contact</a></li>
       </ul>
     </div>
   </div>
