--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   </div>
   </div>
   <div class="footer">
-    <div class="navigation">
+    <div class="navigation footer-navigation">
     <div class="item">
       <h4>© 2021 - Bakkerij</h4>
     </div>
