mobile hamburger menu added

--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,22 @@
   <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
+  <div class="mobile-nav">
+    <div class="top-mobile">
+      <div class="item-mobile" id="close-menu">
+        X
+      </div>
+    </div>
+    <div class="bottom-mobile">
+      <div class="item-mobile">
+        <ul class="nav-links-mobile">
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="./about.html">Over ons</a></li>
+          <li><a href="./contact.html">Contact</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
   <div class="navigation">
     <div class="item">
       <img src="images/logos/logo.svg" alt="Bakkerij Logo" class="logo">
@@ -17,6 +33,7 @@
         <li><a href="./about.html">Over ons</a></li>
         <li><a href="./contact.html" class="current-page">Contact</a></li>
       </ul>
+      <img src="images/icons/hamburgerhelper.png" alt="Menu Icon" class="menu-icon" id="menu-icon">
     </div>
   </div>
   <div class="banner" style="background-image: url('images/photos/Image-3.jpg');">
@@ -103,5 +120,6 @@
     </div>
   </div>
   </div>
+  <script src="js/mobile-menu.js"></script>
 </body>
 </html>
